// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/ActiontechTable-ToolBar render all items 1`] = `
<body>
  <div>
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center full-width-element flex-space-between actiontech-table-toolbar-namespace css-a7k93w"
          style="flex-wrap: wrap; margin-bottom: -8px;"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px; padding-bottom: 8px;"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
                style="margin-right: 12px;"
              >
                我是插入的信息
              </div>
              <div
                class="ant-space-item"
                style="margin-right: 12px;"
              >
                <span
                  class="ant-input-affix-wrapper basic-input-wrapper actiontech-table-search-input-namespace css-1f6svkh ant-input-affix-wrapper-sm"
                >
                  <input
                    class="ant-input ant-input-sm"
                    id="actiontech-table-search-input"
                    placeholder="输入关键字搜索"
                    type="text"
                    value=""
                  />
                  <span
                    class="ant-input-suffix"
                  >
                    <span
                      class="ant-input-clear-icon ant-input-clear-icon-hidden ant-input-clear-icon-has-suffix"
                      role="button"
                      tabindex="-1"
                    >
                      <svg
                        fill="currentColor"
                        height="14"
                        viewBox="0 0 14 14"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                        />
                      </svg>
                    </span>
                    <svg
                      class="custom-icon custom-icon-search"
                      height="14"
                      viewBox="0 0 14 14"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m10.518 9.693 2.499 2.498-.826.825-2.498-2.498a5.252 5.252 0 0 1-8.527-4.101 5.25 5.25 0 0 1 5.25-5.25 5.252 5.252 0 0 1 4.102 8.526m-1.17-.433a4.082 4.082 0 0 0-2.931-6.927 4.08 4.08 0 0 0-4.084 4.084 4.082 4.082 0 0 0 6.927 2.93z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-default ant-btn-sm ant-btn-two-chinese-chars actiontech-filter-button-namespace basic-button-wrapper css-geipcv"
                  style="padding: 0px 6px 0px 10px;"
                  type="button"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center css-1nt49ug"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-right: 2px;"
                    >
                      筛选
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <svg
                        color="currentColor"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
          <div
            class="ant-space-item"
            style="padding-bottom: 8px;"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
                style="margin-right: 12px;"
              >
                <button
                  class="ant-btn ant-btn-default ant-btn-sm actiontech-table-setting-namespace basic-button-wrapper css-geipcv"
                  style="padding: 0px 6px 0px 8px;"
                  type="button"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center css-1nt49ug"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-right: 5px;"
                    >
                      <svg
                        class="custom-icon custom-icon-setting"
                        height="11"
                        viewBox="0 0 13 11"
                        width="13"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M.167 8.5H4.25v1.167H.167zm0-4.083h5.25v1.166H.167zm0-4.084h11.666V1.5H.167zM11.06 5.598l.674-.228.584 1.01-.535.47c.067.319.067.648 0 .967l.535.47-.584 1.01-.674-.228c-.24.216-.524.382-.837.484l-.14.697H8.917l-.14-.698a2.3 2.3 0 0 1-.837-.484l-.674.229-.583-1.01.534-.47a2.3 2.3 0 0 1 0-.967l-.534-.47.583-1.01.674.228c.24-.216.524-.382.837-.484l.14-.697h1.166l.14.697c.313.102.598.269.837.485zM9.5 8.5a1.167 1.167 0 1 0 0-2.333 1.167 1.167 0 0 0 0 2.333"
                        />
                      </svg>
                    </div>
                    <div
                      class="ant-space-item"
                      style="margin-right: 5px;"
                    >
                      表格设置
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <svg
                        class="custom-icon custom-icon-arrow-down"
                        color="currentColor"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-default ant-btn-sm ant-btn-icon-only basic-button-wrapper css-geipcv"
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <svg
                      class="custom-icon custom-icon-refresh"
                      height="14"
                      viewBox="0 0 14 14"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M3.187 2.586a5.833 5.833 0 0 1 8.59 7.762L9.918 7h1.75a4.667 4.667 0 0 0-7.899-3.367zm7.626 8.828a5.833 5.833 0 0 1-8.59-7.762L4.083 7h-1.75a4.667 4.667 0 0 0 7.899 3.367z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`lib/ActiontechTable-ToolBar render loading is true 1`] = `
<body>
  <div>
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center full-width-element flex-space-between actiontech-table-toolbar-namespace css-a7k93w"
          style="flex-wrap: wrap; margin-bottom: -8px;"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px; padding-bottom: 8px;"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            />
          </div>
          <div
            class="ant-space-item"
            style="padding-bottom: 8px;"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`lib/ActiontechTable-ToolBar render noStyle is true 1`] = `
<body>
  <div>
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center css-a7k93w"
          style="flex-wrap: wrap; margin-bottom: -8px; color: rgb(0, 0, 0);"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px; padding-bottom: 8px;"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            />
          </div>
          <div
            class="ant-space-item"
            style="padding-bottom: 8px;"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
